Added templates for gallery

--- a/webapp/petmonitor/templates/dash/photos.html
+++ b/webapp/petmonitor/templates/dash/photos.html
@@ -65,4 +65,120 @@
 <h1 class="h2">Photos</h1>
 {% endblock %}
 
-{% block content %}{% endblock %}
+{% block content %}
+<div class="album py-5 bg-light">
+    <div class="container">
+
+        <!-- Container for image preview cards which will fill space -->
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            
+            <!-- Image preview card -->
+            <div class="col">
+                <div class="card shadow-sm">
+
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" 
+                    role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
+                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <!-- Replace with 
+                    <img src="..." class="img-fluid" alt="...">
+                    -->
+
+                    <div class="card-body">
+                        <p class="card-text">Image date, time and tags (if any).</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            </div>
+                            <small class="text-muted">#lambda</small>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Image preview card -->
+            <div class="col">
+                <div class="card shadow-sm">
+
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" 
+                    role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
+                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <!-- Replace with 
+                    <img src="..." class="img-fluid" alt="...">
+                    -->
+
+                    <div class="card-body">
+                        <p class="card-text">Image date, time and tags (if any).</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            </div>
+                            <small class="text-muted">#pi</small>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Image preview card -->
+            <div class="col">
+                <div class="card shadow-sm">
+
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" 
+                    role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
+                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <!-- Replace with 
+                    <img src="..." class="img-fluid" alt="...">
+                    -->
+
+                    <div class="card-body">
+                        <p class="card-text">Image date, time and tags (if any).</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            </div>
+                            <small class="text-muted">#lambda #pi</small>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Image preview card -->
+            <div class="col">
+                <div class="card shadow-sm">
+
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" 
+                    role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
+                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <!-- Replace with 
+                    <img src="..." class="img-fluid" alt="...">
+                    -->
+
+                    <div class="card-body">
+                        <p class="card-text">Image date, time and tags (if any).</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            </div>
+                            <small class="text-muted"> </small>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div> <!-- End container -->
+
+    </div>
+</div>
+{% endblock %}
