Added instruction for phone number format

--- a/webapp/petmonitor/templates/auth/register.html
+++ b/webapp/petmonitor/templates/auth/register.html
@@ -25,7 +25,7 @@
 
         <div class="form-floating floating-form-label form-row">
             <input type="text" class="form-control" id="floatingPhone" name="floatingPhone" placeholder="Phone Number" required>
-            <label for="floatingPhone">Phone number</label>
+            <label for="floatingPhone">Mobile number (e.g. 0851234567)</label>
         </div>
 
         <div class="form-floating floating-form-label form-row">
