Passed file list to client-side

--- a/webapp/petmonitor/templates/dash/photos.html
+++ b/webapp/petmonitor/templates/dash/photos.html
@@ -66,6 +66,7 @@
 {% endblock %}
 
 {% block content %}
+<p>Timestamps that should populate image list: {{ img_list }}</p>
 <div class="album py-5 bg-light">
     <div class="container">
 
