--- a/webapp/petmonitor/templates/dash/videos.html
+++ b/webapp/petmonitor/templates/dash/videos.html
@@ -66,6 +66,7 @@
 {% endblock %}
 
 {% block content %}
+<p>Timestamps that should populate video list: {{ vid_list }}</p>
 <div class="album py-5 bg-light">
     <div class="container">
 
